--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+<link rel="stylesheet" href="type.css">
 <title>Maranaho N'GUESSAN</title>
 </head>
 <body>
